# ifs

./: Attractor.h  AttractorSet.h  AverageAttractor.h  BoundingBox.h  CMakeLists.txt  ColorMap.h  ColorMap.txt  ColorMaps.h  ComplexAttractor.h  Config.h  Image.h  README.md  TransformAttractor.h  Variations.h  gui  main.cpp  util.cpp  util.h
configs/: fern.config  fern2.config  flame.config  leaf2.config  leaf3.config  shell.config  sierpinski.config
